// === USER MODEL === //

// Enum for user roles
Enum UserRole {
    ADMINISTRATOR // system administrator for data collection and overall moderation
    USER // regular user
}

// Enum for user visibility
Enum UserVisibilityLevel {
    PUBLIC // anyone can see the full profile
    GROUPES_SEULEMENT // only group members can see the full profile
    PRIVE // other users can only see avatar, and username
}

// Enum for user private message level
Enum UserPrivateMessageLevel {
    PERSONNE // does not accept private messages
    MEMBRES_DE_MES_GROUPES // only accepts message from shared group members
    TOUT_LE_MONDE // accepts message from anyone
}

// User Table
Table User {
  userId uuid [primary key]

  email String [not null, unique]
  password String [not null]
  role UserRole [default: `USER`]

  username String [not null, unique]
  firstName String [not null]
  lastName String [not null]
  avatarPictureUrl String
  bio String

  visibilityLevel UserVisibilityLevel [default: `PRIVE`]
  privateMessageLevel UserPrivateMessageLevel [default: `MEMBRES_DE_MES_GROUPES`]

  createdAt datetime [default: `now()`]
  updatedAt datetime
}

// === RESOURCE MODEL === //

// Enum for resource category
Enum ResourceCategory {
    ANXIETY
    SLEEP
    RELATIONSHIP
    WORK
    GRIEF
}

// Enum for resource type
Enum ResourceType {
    ARTICLE
    EXERCICE
    FICHE_PRATIQUE
    LIEN_EXTERNE
}

// Resource Table
Table Resource {
  resourceId uuid [primary key]

  name String [not null, unique]
  category ResourceCategory [not null]
  type ResourceType [not null]
  duration float [not null]
  level int [not null]

  createdAt datetime [default: `now()`]
  updatedAt datetime
}

// === ACTIVITY MODEL === //

// Activity Table
Table Activity {
  activityId uuid [primary key]

  name String [not null, unique]
  desc String [not null]

  createdAt datetime [default: `now()`]
  updatedAt datetime
}

// === JOURNAL ENTRY MODEL === //

// JournalEntry Table
Table JournalEntry {
  journalId uuid [primary key, not null]
  userId uuid [not null, ref: > User.userId]

  generalMood int [not null]
  energyLevel int [not null]
  sleepQuality int [not null]
  stressLevel int [not null]
  keyEvents String [not null]
  dailyGratitude String

  createdAt date [default: `now()`, not null]
  updatedAt datetime

  indexes {
    (userId, createdAt) [unique]
  }
}

// === N-N JUNCTION TABLE BETWEEN JOURNALENTRY & ACTIVITY === //

Table JournalActivity {
    journalId uuid [primary key, ref: > JournalEntry.journalId]
    activityId uuid [primary key, ref: > Activity.activityId]
}

// === GROUP MODEL === //

// Enum for Group Visibility
Enum GroupVisibility {
    PUBLIC
    PRIVE
}

// Enum for Group Member Junction Table
Enum GroupRequestStatus {
    EN_ATTENTE
    ACCEPTEE
    REFUSEE
}

// Enum for Group Member Junction Table
Enum GroupRole {
    MODERATEUR
    MEMBRE
    NON_MEMBRE
}

// Group Table
Table Group {
  groupId uuid [primary key]

  name String [not null]
  theme String [not null]
  desc String [not null]
  rules String [not null]

  visibility String [not null]

  createdAt datetime [default: `now()`]
  updatedAt datetime
}

// === N-N JUNCTION TABLE BETWEEN USERS AND GROUP === //

Table GroupMember {
  userId uuid [primary key, ref: > User.userId]
  groupId uuid [primary key, ref: > Group.groupId]

  role GroupRole [default: `NON_MEMBRE`]
  requestStatus GroupRequestStatus [default: `EN_ATTENTE`]

  createdAt datetime [default: `now()`]
  updatedAt datetime
}

// === POST MODEL === //

Table Post {
  postId uuid [primary key]

  // Nullable in Prisma
  userId uuid [ref: > User.userId]

  // Required in Prisma
  groupId uuid [not null, ref: > Group.groupId]

  title String [not null]
  body String [not null]

  createdAt datetime [default: `now()`]
  updatedAt datetime
}

// === COMMENT MODEL === //

Table Comment {
  commentId uuid [primary key]

  // Nullable in Prisma
  userId uuid [ref: > User.userId]

  // Required in Prisma
  postId uuid [not null, ref: > Post.postId]

  comment String [not null]

  createdAt datetime [default: `now()`]
  updatedAt datetime
}

// === MESSAGE MODEL === //

// Enum for messages read receipt
Enum MessageReadReceipt {
    SENT
    READ
}

// Message Table
Table Message {
  messageId uuid [primary key]

  // Nullable in Prisma
  senderId uuid [ref: > User.userId]
  recipientId uuid [ref: > User.userId]

  message String [not null]
  readReceipt MessageReadReceipt [default: `SENT`, not null]

  createdAt datetime [default: `now()`]
  updatedAt datetime
}

// === REPORT MODEL === //

// Enum for report category
Enum ReportCategory {
    INAPPROPRIE
    SPAM
    INQUIETANT
}

// Enum for report status
Enum ReportStatus {
    EN_ATTENTE
    EN_COURS_DE_REVISION
    RESOLUE
    REJETEE
}

// Report Table
Table Report {
  reportId uuid [primary key]

  postId uuid [not null, ref: > Post.postId]

  // Nullable in Prisma
  userId uuid [ref: > User.userId]

  category ReportCategory [not null]
  status ReportStatus [default: `EN_ATTENTE`]

  createdAt datetime [default: `now()`]
  updatedAt datetime
}

// === REFRESH TOKEN MODEL === //

Table RefreshToken {
  refreshTokenId uuid [primary key]

  userId uuid [not null, ref: > User.userId]

  tokenHash String [not null]
  expiresAt datetime [not null]

  createdAt datetime [default: `now()`]
  revokedAt datetime
  updatedAt datetime
}

// === N-N JUNCTION TABLE BETWEEN USER AND RESOURCE === //

Table Favorite {
  UserId uuid [primary key, ref: > User.userId]
  resourceId uuid [primary key, ref: > Resource.resourceId]

  createdAt datetime [default: `now()`]
}
